Add VectorArray to Values ()
* A quick VectorArray Value to be iterated on to remove some of the
interteam dependency.
* Seal NumberValue and NumberArray classes
* Add factory method to construct VectorValues from NumberArrays and
AnyValues
* Make VectorValues Comparable
* Introduce VectorArray, and corresponding
Value{Representation,Group,Category}
* Add boilerplate to use the ValueRepresentation to create an array of
vectors (disabled currently)
---
* Currently not storable, leaving implementation to Kernel.
* Still needs ValueWriter and ValueMapper implementations